# BrowserProxy

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  blog_Miotsuki の Blog.txt  pyproject.toml  server.py
demo/: test.py  test_shutdown.py
demo/advanced_test/: advanced.html  advanced_test.py  setup_env.py
demo/advanced_test/extension/: background.js  popup.html
demo/douban_test/: README.md  douban_test.py  setup_env.py
demo/douban_test/extension/: content.js  manifest.json  popup.js
demo/form_test/: form.html  form_test.py
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: 0001-browser-proxy-mvp.md  0002-browser-proxy-v0.2.md
examples/: baidu_search.py  download_blog.py
extension/: background.js  manifest.json  popup.html  popup.js
scripts/: build.py  package_extension.ps1  package_extension.py
src/browserproxy/: __init__.py  browser.py  exceptions.py  match.py  tab.py  ws_client.py  ws_server.py
tests/: test_browser.py  test_integration.py  test_match.py  test_tab.py  test_ws_client.py
