[project]
name = "browserproxy"
version = "0.1.0"
description = "通过 Chrome 扩展 + WebSocket 实现对已打开浏览器的操控"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket-client>=1.6.0",
    "loguru>=0.7.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browserproxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
]
